force-app/main/default/objects/Event__c/fields/End__c.field-meta.xml
<CustomField>
    <fullName>End__c</fullName>
    <description>End Date/Time of the event.</description>
    <inlineHelpText>Enter the end Date/Time of the event.</inlineHelpText>
    <label>End</label>
    <type>DateTime</type>
</CustomField>