force-app/main/default/objects/Event__c/fields/Live__c.field-meta.xml
<CustomField>
    <fullName>Live__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The event is live ?</description>
    <inlineHelpText>The event is live ?</inlineHelpText>
    <label>Live?</label>
    <type>Checkbox</type>
</CustomField>