force-app/main/default/objects/Event__c/fields/Location_Verified__c.field-meta.xml
<CustomField>
    <fullName>Location_Verified__c</fullName>
    <description>Carries the info from the field Verified object LocationC</description>
    <formula>LocationC__r.Verified__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Carries the info from the field Verified object LocationC</inlineHelpText>
    <label>Location Verified</label>
    <type>Checkbox</type>
</CustomField>