force-app/main/default/objects/Event__c/fields/Max_Seats__c.field-meta.xml
<CustomField>
    <fullName>Max_Seats__c</fullName>
    <description>The number of maximum seats available.</description>
    <inlineHelpText>Enter the number of maximum seats available.</inlineHelpText>
    <label>Max Seats</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>