force-app/main/default/objects/Event__c/fields/Recurring__c.field-meta.xml
<CustomField>
    <fullName>Recurring__c</fullName>
    <defaultValue>false</defaultValue>
    <description>It&apos;s a recurring event ?</description>
    <inlineHelpText>It&apos;s a recurring event ?</inlineHelpText>
    <label>Recurring?</label>
    <type>Checkbox</type>
</CustomField>