force-app/main/default/objects/Event__c/fields/Start__c.field-meta.xml
<CustomField>
    <fullName>Start__c</fullName>
    <description>Start Date/Time of the event.</description>
    <inlineHelpText>Enter the start Date/Time of the event.</inlineHelpText>
    <label>Start</label>
    <type>DateTime</type>
</CustomField>