force-app/main/default/objects/Event__c/validationRules/If_Date_End_greater_than_Start.validationRule-meta.xml
<ValidationRule>
    <fullName>If_Date_End_greater_than_Start</fullName>
    <active>true</active>
    <description>End Date/Time must be at-least 1 day ahead of Start Date/Time (If there is a value in End Date/Time field)</description>
    <errorConditionFormula>AND(DATEVALUE(End__c) &lt;= DATEVALUE(Start__c), NOT(ISNULL(End__c)))</errorConditionFormula>
    <errorDisplayField>End__c</errorDisplayField>
    <errorMessage>End Date/Time must be at-least 1 day ahead of Start Date/Time (If there is a value in End Date/Time field)</errorMessage>
</ValidationRule>