force-app/main/default/objects/Event__c/validationRules/if_event_type_in_person.validationRule-meta.xml
<ValidationRule>
    <fullName>if_event_type_in_person</fullName>
    <active>true</active>
    <description>If Event Type field value is In-Person then user must need to select Location on Event Record.</description>
    <errorConditionFormula>AND( Text(Event_Type__c) = &apos;In-Person&apos;, ISBLANK( LocationC__c))</errorConditionFormula>
    <errorDisplayField>LocationC__c</errorDisplayField>
    <errorMessage>If Event Type field value is In-Person then user must need to select Location on Event Record.</errorMessage>
</ValidationRule>