force-app/main/default/objects/Event__c/validationRules/If_Virtual.validationRule-meta.xml
<ValidationRule>
    <fullName>If_Virtual</fullName>
    <active>true</active>
    <description>If Virtual is Selected as Value for Event Type field then Prevent User to Select Location on Event Record.</description>
    <errorConditionFormula>AND((Text(Event_Type__c) = &apos;Virtual&apos;), NOT(ISBLANK(LocationC__c)))</errorConditionFormula>
    <errorDisplayField>Event_Type__c</errorDisplayField>
    <errorMessage>If Virtual is Selected as Value for Event Type field then Prevent User to Select Location on Event Record.</errorMessage>
</ValidationRule>