force-app/main/default/objects/Event__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Event_Organizer__c</columns>
    <columns>Start__c</columns>
    <columns>End__c</columns>
    <columns>LocationC__c</columns>
    <columns>Location_Verified__c</columns>
    <columns>Recurring__c</columns>
    <columns>People_Attending__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>